--- a/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF.csproj
+++ b/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="BlurWindow" Version="3.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Prism.Unity" Version="8.0.0.1909" />
     <PackageReference Include="Prism.Wpf" Version="8.0.0.1909" />
   </ItemGroup>
 
