--- a/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF.csproj
+++ b/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF/MSDN-Magazine-To-PDF.csproj
@@ -8,10 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="ba.jpeg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BlurWindow" Version="3.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Prism.Unity" Version="8.0.0.1909" />
     <PackageReference Include="Prism.Wpf" Version="8.0.0.1909" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="ba.jpeg" />
   </ItemGroup>
 
 </Project>
